Add tags and openapi spec
