# carbonmark-api/src/plugins/open-api.ts
@@ -20,7 +20,7 @@ export default fp(async function (fastify) {
         version: "0.1.0",
       },
       externalDocs: {
-        url: "https://swagger.io",
+        url: "https://klimadao.stoplight.io/docs/carbonmark-api",
         description: "Find more info here",
       },
       host: "localhost",
@@ -28,121 +28,109 @@ export default fp(async function (fastify) {
       consumes: ["application/json"],
       produces: ["application/json"],
       tags: [
+        { name: "auth", description: "Authentication related end-points" },
         { name: "user", description: "User related end-points" },
         { name: "category", description: "Code related end-points" },
         { name: "country", description: "Code related end-points" },
         { name: "project", description: "Code related end-points" },
       ],
-      definitions: {
-        User: {
-          type: "object",
-          required: ["wallet", "email"],
-          properties: {
-            wallet: { type: "string", format: "address" },
-            handle: { type: "string" },
-            username: { type: "string" },
-            description: { type: "string", format: "text" },
-            listings: {
-              type: "array",
-              items: {
-                type: "object",
-                properties: {
-                  id: { type: "number" },
-                  totalAmountToSell: { type: "number" },
-                  tokenAddress: { type: "address" },
-                  active: { type: "boolean" },
-                  deleted: { type: "boolean", items: [] },
-                  batches: { type: "array", items: [] },
-                  batchPrices: { type: "array" },
-                  singleUnitPrice: { type: "number" },
-                  project: {
-                    type: "object",
-                    properties: {
-                      name: { type: "string" },
-                      category: { type: "string" },
-                    },
-                  },
-                },
-              },
-            },
-            activities: {
-              type: "array",
-              items: {
-                type: "object",
-                properties: {
-                  id: { type: "number" },
-                  amount: { type: "number" },
-                  previousAmount: { type: "number" },
-                  price: { type: "number" },
-                  previousPrice: { type: "number" },
-                  timeStamp: { type: "number" },
-                  project: {
-                    type: "object",
-                    properties: {
-                      key: { type: "string" },
-                    },
-                  },
-                  seller: {
-                    type: "object",
-                    properties: {
-                      id: { type: "address" },
-                    },
-                  },
-                  buyer: {
-                    type: "object",
-                    properties: {
-                      id: { type: "address" },
-                    },
-                  },
-                },
-              },
-            },
-          },
-        },
-        Project: {
-          type: "object",
-          properties: {
-            id: { type: "number" },
-            key: { type: "string" },
-            projectID: { type: "string" },
-            name: { type: "string" },
-            methodology: { type: "string" },
-            vintage: { type: "number" },
-            projectAddress: { type: "address" },
-            registry: { type: "string" },
-          },
-        },
-        Category: {
-          type: "object",
-          properties: {
-            id: { type: "string" },
-          },
-        },
-        Country: {
-          type: "object",
-          properties: {
-            id: { type: "string" },
-          },
-        },
-      },
-      securityDefinitions: {
-        apiKey: {
-          type: "apiKey",
-          name: "apiKey",
-          in: "header",
-        },
-      },
+      // definitions: {
+      //   User: {
+      //     type: "object",
+      //     required: ["wallet", "email"],
+      //     properties: {
+      //       wallet: { type: "string", format: "address" },
+      //       handle: { type: "string" },
+      //       username: { type: "string" },
+      //       description: { type: "string", format: "text" },
+      //       listings: {
+      //         type: "array",
+      //         items: {
+      //           type: "object",
+      //           properties: {
+      //             id: { type: "number" },
+      //             totalAmountToSell: { type: "number" },
+      //             tokenAddress: { type: "address" },
+      //             active: { type: "boolean" },
+      //             deleted: { type: "boolean", items: [] },
+      //             batches: { type: "array", items: [] },
+      //             batchPrices: { type: "array" },
+      //             singleUnitPrice: { type: "number" },
+      //             project: {
+      //               type: "object",
+      //               properties: {
+      //                 name: { type: "string" },
+      //                 category: { type: "string" },
+      //               },
+      //             },
+      //           },
+      //         },
+      //       },
+      //       activities: {
+      //         type: "array",
+      //         items: {
+      //           type: "object",
+      //           properties: {
+      //             id: { type: "number" },
+      //             amount: { type: "number" },
+      //             previousAmount: { type: "number" },
+      //             price: { type: "number" },
+      //             previousPrice: { type: "number" },
+      //             timeStamp: { type: "number" },
+      //             project: {
+      //               type: "object",
+      //               properties: {
+      //                 key: { type: "string" },
+      //               },
+      //             },
+      //             seller: {
+      //               type: "object",
+      //               properties: {
+      //                 id: { type: "address" },
+      //               },
+      //             },
+      //             buyer: {
+      //               type: "object",
+      //               properties: {
+      //                 id: { type: "address" },
+      //               },
+      //             },
+      //           },
+      //         },
+      //       },
+      //     },
+      //   },
+      //   Project: {
+      //     type: "object",
+      //     properties: {
+      //       id: { type: "number" },
+      //       key: { type: "string" },
+      //       projectID: { type: "string" },
+      //       name: { type: "string" },
+      //       methodology: { type: "string" },
+      //       vintage: { type: "number" },
+      //       projectAddress: { type: "address" },
+      //       registry: { type: "string" },
+      //     },
+      //   },
+      //   Category: {
+      //     type: "object",
+      //     properties: {
+      //       id: { type: "string" },
+      //     },
+      //   },
+      //   Country: {
+      //     type: "object",
+      //     properties: {
+      //       id: { type: "string" },
+      //     },
+      //   },
+      // },
     },
-    uiConfig: {
-      docExpansion: "full",
-      deepLinking: false,
-    },
-    staticCSP: true,
-    exposeRoute: true,
   });
 
   // eslint-disable-next-line @typescript-eslint/no-var-requires -- this package does not yet support es module imports
-  await fastify.register(require("@fastify/swagger-ui"));
+  await fastify.register(require("@fastify/swagger-ui"), {});
 
   fastify.ready((err) => {
     if (err) throw err;
